force-app/main/default/objects/Creditsafe_Person_Director__c/Creditsafe_Person_Director__c.object-meta.xml
<CustomObject>
    <description>A CreditsafePersonDirectorsV2.</description>
    <label>Creditsafe Person Director</label>
    <nameField>
        <label>Creditsafe Person Directors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creditsafe Person Directors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>