force-app/main/default/objects/Creditsafe_Person_Director__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>The director’s date of birth.</description>
    <label>Date of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>