force-app/main/default/objects/Creditsafe_Person_Director__c/fields/Director_Address__c.field-meta.xml
<CustomField>
    <fullName>Director_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A CreditsafeAddressV2.</description>
    <label>Director Address</label>
    <referenceTo>Dossier_Address__c</referenceTo>
    <relationshipLabel>Creditsafe Person Directors</relationshipLabel>
    <relationshipName>Creditsafe_Person_Directors</relationshipName>
    <type>Lookup</type>
</CustomField>