force-app/main/default/objects/Creditsafe_Person_Director__c/fields/Director_Id__c.field-meta.xml
<CustomField>
    <fullName>Director_Id__c</fullName>
    <description>Director id.</description>
    <label>Director Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>