force-app/main/default/objects/Creditsafe_Person_Director__c/fields/Director_Type__c.field-meta.xml
<CustomField>
    <fullName>Director_Type__c</fullName>
    <description>Type of director (example Person or Company).</description>
    <label>Director Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>