force-app/main/default/objects/Creditsafe_Person_Director__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>The director’s gender.</description>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>