force-app/main/default/objects/Creditsafe_Person_Director__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>An Array of CreditsafePersonPositionV2 entries.</description>
    <label>Position</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>