force-app/main/default/objects/Creditsafe_Person_Director__c/recordTypes/Current_Director.recordType-meta.xml
<RecordType>
    <fullName>Current_Director</fullName>
    <active>true</active>
    <description>Current Director</description>
    <label>Current Director</label>
</RecordType>