force-app/main/default/objects/Creditsafe_Person_Director__c/recordTypes/Previous_Director.recordType-meta.xml
<RecordType>
    <fullName>Previous_Director</fullName>
    <active>true</active>
    <description>Previous Director</description>
    <label>Previous Director</label>
</RecordType>